--- a/XGBoostModel-FluShotLearningCompetition.ipynb
+++ b/XGBoostModel-FluShotLearningCompetition.ipynb
@@ -767,18 +767,16 @@
    "source": [
     "def objective(trial, F, t):\n",
     "    param_grid = {\n",
-    "        # \"device_type\": trial.suggest_categorical(\"device_type\", ['gpu']),\n",
     "        'n_estimators': trial.suggest_int('n_estimators', 100, 500, step=25),\n",
     "        \"learning_rate\": trial.suggest_float(\"learning_rate\", 0.01, 0.15, step=0.001),\n",
-    "        \"max_depth\": trial.suggest_int(\"max_depth\", 3, 10),\n",
-    "        \"reg_alpha\": trial.suggest_float(\"reg_alpha\", 0.01, 10, step=0.001),\n",
-    "        \"reg_lambda\": trial.suggest_float(\"reg_lambda\", 1, 100),\n",
-    "        \"subsample\": trial.suggest_float(\"subsample\", 0.05, 1, step=0.001),\n",
-    "        \"colsample_bytree\": trial.suggest_float(\"colsample_bytree\", 0.05, 1, step=0.001),\n",
-    "        \"class_weight\":  trial.suggest_categorical(\"class_weight\", [\"balanced\", None]), \n",
+    "        \"max_depth\": trial.suggest_int(\"max_depth\", 3, 12),\n",
+    "        \"alpha\": trial.suggest_float(\"alpha\", 0.01, 10, step=0.01),\n",
+    "        \"lambda\": trial.suggest_float(\"lambda\", 1, 100, step=1),\n",
+    "        \"subsample\": trial.suggest_float(\"subsample\", 0.5, 1, step=0.01),\n",
+    "        \"colsample_bytree\": trial.suggest_float(\"colsample_bytree\", 0.5, 1, step=0.01),\n",
+    "        \"min_child_weight\": trial.suggest_int(\"min_child_weight\", 1, 10),\n",
+    "        \"scale_pos_weight\": trial.suggest_float(\"scale_pos_weight\", 1, 10)\n",
     "    }\n",
-    "\n",
-    " \n",
     "\n",
     "    cv = StratifiedKFold(n_splits=10)\n",
     "    cv_scores = np.empty(10)\n",
@@ -786,23 +784,19 @@
     "        X_train_f, X_test_f = F.iloc[train_idx], F.iloc[test_idx]\n",
     "        y_train_f, y_test_f = t[train_idx], t[test_idx]\n",
     "\n",
-    " \n",
-    "\n",
-    "        model = LGBMClassifier(random_state=42, n_jobs=-1 , **param_grid)\n",
+    "        model = XGBClassifier(random_state=42, n_jobs=-1 , **param_grid)\n",
     "\n",
     "        model.fit(\n",
     "            X_train_f,\n",
     "            y_train_f,\n",
     "            verbose=False,\n",
     "            eval_set=[(X_test_f, y_test_f)],\n",
-    "            eval_metric='roc_auc',\n",
+    "            eval_metric='auc',\n",
     "            early_stopping_rounds=100\n",
     "             )\n",
     "        preds = model.predict_proba(X_test_f)[:,1]\n",
     "\n",
     "        cv_scores[idx] = roc_auc_score(y_test_f, preds)\n",
-    "\n",
-    " \n",
     "\n",
     "    return np.mean(cv_scores)"
    ]
@@ -817,10 +811,10 @@
     "X_seasonal_train.reset_index(drop=True, inplace=True)\n",
     "y_seasonal_train.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "study_seasonal = optuna.create_study(direction='maximize', study_name=\"LGBM Classifier\")\n",
+    "study_seasonal = optuna.create_study(direction='maximize', study_name=\"XGBoost Classifier\")\n",
     "func = lambda trial: objective(trial, X_seasonal_train, y_seasonal_train)\n",
     "optuna.logging.set_verbosity(optuna.logging.WARNING)\n",
-    "study_seasonal.optimize(func, n_trials=100, n_jobs=-1, show_progress_bar=True)"
+    "study_seasonal.optimize(func, n_trials=500, n_jobs=-1, show_progress_bar=True)"
    ]
   },
   {
@@ -844,10 +838,10 @@
     "X_h1n1_train.reset_index(drop=True, inplace=True)\n",
     "y_h1n1_train.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "study_h1n1 = optuna.create_study(direction='maximize', study_name=\"LGBM Classifier\")\n",
+    "study_h1n1 = optuna.create_study(direction='maximize', study_name=\"XGBoost Classifier\")\n",
     "func = lambda trial: objective(trial, X_h1n1_train, y_h1n1_train)\n",
     "optuna.logging.set_verbosity(optuna.logging.WARNING)\n",
-    "study_h1n1.optimize(func, n_trials=100, n_jobs=-1, show_progress_bar=True)"
+    "study_h1n1.optimize(func, n_trials=500, n_jobs=-1, show_progress_bar=True)"
    ]
   },
   {
@@ -880,7 +874,7 @@
    },
    "outputs": [],
    "source": [
-    "clf_seasonal = LGBMClassifier(**study_seasonal.best_params, n_jobs=-1, random_state=42, verbose=0)"
+    "clf_seasonal = XGBClassifier(**study_seasonal.best_params, n_jobs=-1, random_state=42, verbose=0)"
    ]
   },
   {
@@ -978,7 +972,7 @@
     "\n",
     "# Print the confusion matrices and accuracy scores for each fold\n",
     "for fold in range(k):\n",
-    "    confusion_matrix_plotting(confusion_matrices[fold], (\"LGBM \" + f\"Fold {fold+1}\"))\n",
+    "    confusion_matrix_plotting(confusion_matrices[fold], (\"XGBoost \" + f\"Fold {fold+1}\"))\n",
     "    print(\"\\n\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(\"\\n\")\n",
@@ -1037,7 +1031,7 @@
    "outputs": [],
    "source": [
     "test = np.array([[Average(truepositive), Average(falsenegative)], [Average(falsepositive), Average(truenegative)]]) \n",
-    "confusion_matrix_plotting(test, (\"LGBM Seasonal Average\"))"
+    "confusion_matrix_plotting(test, (\"XGBoost Seasonal Average\"))"
    ]
   },
   {
@@ -1069,7 +1063,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_h1n1 = LGBMClassifier(**study_h1n1.best_params, n_jobs=-1, random_state=42, verbose=0)"
+    "clf_h1n1 = XGBClassifier(**study_h1n1.best_params, n_jobs=-1, random_state=42, verbose=0)"
    ]
   },
   {
@@ -1155,7 +1149,7 @@
     "\n",
     "# Print the confusion matrices and accuracy scores for each fold\n",
     "for fold in range(k):\n",
-    "    confusion_matrix_plotting(confusion_matrices[fold], (\"LGBM \" + f\"Fold {fold+1}\"))\n",
+    "    confusion_matrix_plotting(confusion_matrices[fold], (\"XGBoost \" + f\"Fold {fold+1}\"))\n",
     "    print(\"\\n\")\n",
     "    print(\"Classification Report:\")\n",
     "    print(\"\\n\")\n",
@@ -1177,7 +1171,7 @@
    "outputs": [],
    "source": [
     "test_h1n1 = np.array([[Average(truepositive), Average(falsenegative)], [Average(falsepositive), Average(truenegative)]]) \n",
-    "confusion_matrix_plotting(test_h1n1, (\"LGBM H1N1 Average\"))"
+    "confusion_matrix_plotting(test_h1n1, (\"XGBoost H1N1 Average\"))"
    ]
   },
   {
@@ -1256,7 +1250,7 @@
     "plt.xticks(fontsize=14)\n",
     "plt.xlabel(\"Feature Importance\", fontsize=18)\n",
     "plt.ylabel(\"Features\", fontsize=18)\n",
-    "plt.title(\"Feature Importance for LGBM - Seasonal\", fontsize=18)\n",
+    "plt.title(\"Feature Importance for XGBoost - Seasonal\", fontsize=18)\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -1318,7 +1312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_seasonal.iloc[:,[-2,-1]].to_csv(\"seasonallgbm.csv\", sep=\",\")"
+    "data_seasonal.iloc[:,[-2,-1]].to_csv(\"seasonalxgb.csv\", sep=\",\")"
    ]
   },
   {
@@ -1385,7 +1379,7 @@
    "outputs": [],
    "source": [
     "cm = confusion_matrix(y_seasonal_test, y_seasonal_pred)\n",
-    "confusion_matrix_plotting(np.flip(cm), \"LGBM Seasonal Test Set\")"
+    "confusion_matrix_plotting(np.flip(cm), \"XGBoost Seasonal Test Set\")"
    ]
   },
   {
@@ -1558,11 +1552,11 @@
     "plt.ylim(0,1)\n",
     "plt.xlabel(\"False Positive Rate (FPR)\", fontsize=14)\n",
     "plt.ylabel(\"True Positive Rate (TPR)\", fontsize=14)\n",
-    "plt.title(\"ROC-AUC Curve for LGBM\", fontsize=18)\n",
+    "plt.title(\"ROC-AUC Curve for XGBoost\", fontsize=18)\n",
     "plt.xticks([0, 0.2, 0.4, 0.6, 0.8, 1.0], fontsize=14)\n",
     "plt.yticks([0, 0.2, 0.4, 0.6, 0.8, 1.0], fontsize=14)\n",
     "legend_properties = {'size': 16, 'weight':'bold'}\n",
-    "plt.legend(loc=4, labels=['LGBM (AUC: ' + str(np.round(roc_auc,4)) + \")\"], prop=legend_properties, frameon=False)\n",
+    "plt.legend(loc=4, labels=['XGBoost (AUC: ' + str(np.round(roc_auc,4)) + \")\"], prop=legend_properties, frameon=False)\n",
     "plt.show()"
    ]
   },
@@ -1633,7 +1627,7 @@
     "plt.xticks(fontsize=14)\n",
     "plt.xlabel(\"Feature Importance\", fontsize=18)\n",
     "plt.ylabel(\"Features\", fontsize=18)\n",
-    "plt.title(\"Feature Importance for LGBM - H1N1\", fontsize=18)\n",
+    "plt.title(\"Feature Importance for XGBoost - H1N1\", fontsize=18)\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -1683,7 +1677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_h1n1.iloc[:,[-2,-1]].to_csv(\"h1n1lgbm.csv\", sep=\",\")"
+    "data_h1n1.iloc[:,[-2,-1]].to_csv(\"h1n1xgb.csv\", sep=\",\")"
    ]
   },
   {
@@ -1738,7 +1732,7 @@
    "outputs": [],
    "source": [
     "cm_h1n1 = confusion_matrix(y_h1n1_test, y_h1n1_pred)\n",
-    "confusion_matrix_plotting(np.flip(cm_h1n1), \"LGBM H1N1 Test Set\")"
+    "confusion_matrix_plotting(np.flip(cm_h1n1), \"XGBoost H1N1 Test Set\")"
    ]
   },
   {
@@ -1863,11 +1857,11 @@
     "plt.ylim(0,1)\n",
     "plt.xlabel(\"False Positive Rate (FPR)\", fontsize=14)\n",
     "plt.ylabel(\"True Positive Rate (TPR)\", fontsize=14)\n",
-    "plt.title(\"ROC-AUC Curve for LGBM\", fontsize=18)\n",
+    "plt.title(\"ROC-AUC Curve for XGBoost\", fontsize=18)\n",
     "plt.xticks([0, 0.2, 0.4, 0.6, 0.8, 1.0], fontsize=14)\n",
     "plt.yticks([0, 0.2, 0.4, 0.6, 0.8, 1.0], fontsize=14)\n",
     "legend_properties = {'size': 16, 'weight':'bold'}\n",
-    "plt.legend(loc=4, labels=['LGBM (AUC: ' + str(np.round(roc_auc,4)) + \")\"], prop=legend_properties, frameon=False)\n",
+    "plt.legend(loc=4, labels=['XGBoost (AUC: ' + str(np.round(roc_auc,4)) + \")\"], prop=legend_properties, frameon=False)\n",
     "plt.show()"
    ]
   },
@@ -2296,48 +2290,8 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('lgbm.csv', sep=\",\", index=False)"
+    "df.to_csv('xgboost.csv', sep=\",\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "150bff0e",
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 21765,
-     "status": "aborted",
-     "timestamp": 1688240464724,
-     "user": {
-      "displayName": "Gowsikan Perinparajah",
-      "userId": "18265124575842527721"
-     },
-     "user_tz": 240
-    },
-    "id": "03815551"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a98b216",
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 21764,
-     "status": "aborted",
-     "timestamp": 1688240464724,
-     "user": {
-      "displayName": "Gowsikan Perinparajah",
-      "userId": "18265124575842527721"
-     },
-     "user_tz": 240
-    },
-    "id": "4b11f7fd"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
